Created ThreadType enum for property identification